added bootstrap grid system inside container

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,2 +1,18 @@
-h1 Pages#home
-p Find me in app/views/pages/home.html.slim
+.row
+  .col-xs-3
+    .panel.panel-default
+      .panel-body
+        p stats
+  .col-xs-6
+    .panel.panel-default
+      .panel-body
+        p feed
+  .col-xs-3
+    .panel.panel-default
+      .panel-body
+        p about
+.row
+  .col-xs-3
+    .panel.panel-default
+      .panel-body
+        p trends
