user profile linked

--- a/app/views/layouts/_nav_guest.html.slim
+++ b/app/views/layouts/_nav_guest.html.slim
@@ -20,6 +20,7 @@ nav.navbar.navbar-default
         li.dropdown
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
             | Navigation
+            span.caret
           ul.dropdown-menu 
             li
               a href="#" Help
