landing page creation and styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,46 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+body {
+  background-color: rgba(212,216,212,0.2)
+}
+
+.navbar {
+  background-color: white;
+}
+
+.navbar-brand {
+  position: absolute;
+  left: 50%;
+}
+
+img {
+  height :25px;
+}
+
+.post_left {
+  
+
+}
+
+.post-right {
+  .post-links {
+    padding-left: 0px;
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
