--- a/app/views/layouts/_nav_user.html.slim
+++ b/app/views/layouts/_nav_user.html.slim
@@ -1,30 +1,30 @@
 nav.navbar.navbar-default
-  .container-fluid
+  .container-fluid.container
     .navbar-header
       button.navbar-toggle.collapsed aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button" 
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="/" Twitter
+    .navbar-brand
+      = image_tag("logo.png")
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
           a href="/home" Home
         li
-          a href="#" Explore
+          a href="#" Notifications
+        li
+          a href="#" Messages
 
       ul.nav.navbar-nav.navbar-right
         li
-          a href="#" Tweet
-        form.navbar-form.navbar-right role="search" 
-          .form-group
-            input.form-control placeholder="Search" type="text"
-          button.btn.btn-default type="submit"  Submit
-        li.dropdown
+          form.navbar-form.navbar-right role="search" 
+            .form-group
+              input.form-control placeholder="Search Twitter" type="text"
+        li.dropdown.navigation
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
-            = current_user.username
-            span.caret
+            = image_tag("profile.png")
           ul.dropdown-menu
             li
               a href="/user/#{current_user.username}" Profile
@@ -35,3 +35,4 @@ nav.navbar.navbar-default
             li= link_to "Settings", edit_user_registration_path
             li.divider role="separator" 
             li= link_to "Log Out", destroy_user_session_path, method: :delete
+        li.btn.btn-primary.navbar-btn type="button" Tweet
