--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,16 +3,28 @@
     .panel.panel-default
       .panel-body
         p stats
-  .col-xs-6
     .panel.panel-default
       .panel-body
-        p feed
+        p trends
+  .col-xs-6
+    = render '/posts/post'
+    - @posts.each do |post|
+      .panel.panel-default
+        .panel-body
+          .row
+            .col-xs-1.post_left
+              = image_tag("profile.png")
+            .col-xs-11.post_right
+              .row
+                | links
+              .row
+                = post.content
+              .row
+                span.glyphicon.glyphicon-star.col-xs-2.post-links
+                span.glyphicon.glyphicon-retweet.col-xs-2.post-links
+                span.glyphicon.glyphicon-heart.col-xs-2.post-links
+                span.glyphicon.glyphicon-option-horizontal.col-xs-2.post-links
   .col-xs-3
     .panel.panel-default
       .panel-body
         p about
-.row
-  .col-xs-3
-    .panel.panel-default
-      .panel-body
-        p trends
