--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,2 +1,69 @@
-h1 Pages#index
-p Find me in app/views/pages/index.html.slim
+- if !user_signed_in?
+  css:
+    body {
+      background: linear-gradient( 
+        rgba(0,0,0, 0.7),
+        rgba(0,0,0, 0.7)
+      ),
+      url("/bg.jpg") no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+    h1 {
+      color: white;
+      font-weight: bold;
+    }
+    .container-index {
+      margin-right: 15%;
+      margin-left: 15%;
+    }
+    .text {
+      color: white;
+      font-weight: 300;
+      font-size: 150%;
+    }
+    .footer-links {
+      text-align: center;
+      color: white;
+      margin-top: 30%;
+      font-size: 75%;
+    }
+    .log-in {
+      float: right;
+      width: 300px;
+      height: 150px;
+      margin-top: 7.5%;
+    }
+    .sign-up {
+      float: right;
+      width: 300px;
+      height: 250px;
+    }
+    .log-in-form {
+      margin: 5px;
+    }
+    
+  .container-index.row
+    .col-sm-6
+      h1 Welcome to Twitter
+      p.text
+        | Connect with your buddies. Chat with new friends. 
+        br
+        | Share your adventures. Have fun! 
+        br
+        | Just like a blog, but with less characters!
+    .col-sm-6
+      .log-in.panel Log In 
+                
+      .sign-up.panel Sign Up
+    
+    .col-sm-12
+      p.footer-links
+      | About  Help  Blog  Status  Jobs  Terms  Privacy  Cookies  Ads  info  Brand  Advertise  Businesses  Media  Developers  Directory © 2016 Flutter
+      
+
+- else
+  javascript:
+    document.location = "/home"
